cluster-go/applications/odm/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: odm
  namespace: odm
spec:
  port:
    targetPort: 8000
  tls:
    termination: edge
  to:
    kind: Service
    name: webodm
    weight: 100
  wildcardPolicy: None
